--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,17 +14,22 @@ jobs:
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
+        with:
+          platforms: 'arm64,arm'
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2.5.0
         with:
           buildkitd-flags: --debug
       -
-        name: docker hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - 
-        name: build
-        run: |
-           docker buildx build --push \
-           --tag iampuid0/pdrcrd:experimental_multiarch \
-           --platforms: linux/amd64,linux/arm64 .
+        name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: user/app:experimental_multiarch
