--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,8 @@ name: build
 on:
   push:
     branches: [ "master" ]
-
+    paths-ignore:
+      - '**/README.md'
 jobs:
   buildx:
     runs-on: ubuntu-latest
@@ -15,12 +16,10 @@ jobs:
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         with:
-          platforms: 'arm64,arm'
+          platforms: 'all'
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2.5.0
-        with:
-          buildkitd-flags: --debug
       -
         name: Login to DockerHub
         uses: docker/login-action@v2
@@ -31,5 +30,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v3
         with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          tags: iampuid0/pdrcrd:experimental_multiarch
+          tags: ${{ secrets.DOCKER_USERNAME }}/pdrcrd:experimental_multiarch
