add Ubuntu to ignore path

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "master" ]
     paths-ignore:
       - '**/README.md'
+      - 'Ubuntu/**'
 jobs:
   buildx:
     runs-on: ubuntu-latest
