--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,6 +3,7 @@ name: Docker Hub Build
 on:
   schedule:
   - cron: "0 0 * * *"
+  workflow_dispatch:
   push:
     branches: [ "master" ]
     paths-ignore:
