--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,6 +9,9 @@ on:
     paths-ignore:
       - '**/README.md'
       - 'Ubuntu/**'
+      - '.github/**'
+      - '.gitattributes'
+      - '.gitignore'
 jobs:
   buildx:
     runs-on: ubuntu-latest
