--- a/.github/workflows/refactored-docker-image.yml
+++ b/.github/workflows/refactored-docker-image.yml
@@ -39,6 +39,6 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/refactored-pdrcrd:latest
